<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="AddressStr">Address</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_name"><i>Name</i></string>
    <string name="add_number"><i>Phone Number</i></string>
    <string name="add_email"><i>Email</i></string>
    <string name="add_street"><i>Street Address</i></string>
    <string name="add_city"><i>City</i></string>
    <string name="delete_contact">Delete Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="save">Save</string>
    <string name="confirm">Warning!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirmMessage">Are you sure you want to delete this contact?</string>
    <color name="focusedBorderColor">#00BFFF</color>
    <color name="normBorderColor">#555</color>
    <color name="darkGray">#585858</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

</resources>
