<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<requestFocus/>
	    <EditText
	        android:id="@+id/Name"
			style="@style/ContactEditTextView"
	        android:hint="@string/add_name"
	        android:ems="10"
	        android:inputType="textPersonName"/>
	
	    <EditText
	        android:id="@+id/Phone"
	        android:hint="@string/add_number"
	   		style="@style/ContactEditTextView"
	        android:ems="10"
	        android:inputType="phone" />
	
	    <EditText
	        android:id="@+id/Email"
	        android:hint="@string/add_email"
	   		style="@style/ContactEditTextView"
	        android:ems="10"
	        android:inputType="textEmailAddress" />
	
	    <TextView
	        android:id="@+id/Address_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/AddressStr"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/Street"
	        android:hint="@string/add_street"
	   		style="@style/ContactEditTextView"
	        android:ems="10"
	        android:inputType="textPostalAddress" >
	
	    </EditText>
	
	    <EditText
	        android:id="@+id/City"
	        android:hint="@string/add_city"
	   		style="@style/ContactEditTextView"
	        android:ems="10"
	        android:inputType="textPostalAddress" />
	    
	    <Button
	        android:id="@+id/Save"
	        android:text="@string/save"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	</TableLayout>
</ScrollView>